--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </li>
         <!-- Dropdown -->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="instr.html" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
             Student's Corner
           </a>
           <!-- Dropdown menu -->
