--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </li>
         <!-- Dropdown -->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="instr.html" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
             Student's Corner
           </a>
           <!-- Dropdown menu -->
@@ -59,7 +59,7 @@
               <a class="dropdown-item" href="#alumni"><i class="fas fa-user-graduate"></i>  Alumni</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#"><i class="fas fa-book"></i>  Study Materials</a>
+              <a class="dropdown-item" href="instr.html"><i class="fas fa-book"></i>  Study Materials</a>
             </li>
             <li>
               <a class="dropdown-item" href="https://www.onlinegdb.com/"><i class="fas fa-code"></i>  Online IDE</a>
