--- a/where.html
+++ b/where.html
@@ -80,9 +80,19 @@
 </nav>
 <!-- Navbar -->
 <div class="gmaps">
-    <h2>Locate Us</h2>
-    <div class="embedded">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3945.4076192712073!2d77.06508961478323!3d8.556744293849329!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05b6e67529d5c3%3A0xbebe4e3464068a63!2sSarabhai%20Institute%20of%20Science%20and%20Technology!5e0!3m2!1sen!2sin!4v1623860410783!5m2!1sen!2sin" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <h2>Guide</h2>
+    <div class="setup">
+      <p>1. VS Code : <a href="https://code.visualstudio.com/docs/?dv=win"><u>Download</u></a></p>
+      <p>2. <b>Install MinGW & Set Environment Path on your Windows 10</b><sup>To Run C/C++ Programs</sup></p>
+      <p>MinGW : <a href="https://sourceforge.net/projects/mingw/files/Installer/"><u>Download</u></a></p>
+      <p>Instructions on How to Setup MinGW on your Windows</p>
+      <iframe width="655" height="357" src="https://www.youtube.com/embed/guM4XS43m4I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p>3. Setup Visual Studio Code for C and C++ Programming</p>
+      <iframe width="655" height="357" src="https://www.youtube.com/embed/77v-Poud_io" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <p><b>4 . Install Java JDK</b><sup>To run Java Programs</sup></p>
+      <p>Java JDK : <a href="https://www.oracle.com/java/technologies/javase-jdk16-downloads.html"><u>Download</u></a></p>
+      <p>5. Setup Visual Studio Code for Java Programming</p>
+      <iframe width="655" height="357" src="https://www.youtube.com/embed/KwnavHTOBiA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </div>
 <!-- FOOTER BEGIN -->
