--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ The college is strict in discipline - anti ragging..</p>
 </footer>
 <div class="bottom-footer">
   <div class = "inner-wrap clearfix">
-   Developed By [𝘼𝙠𝙖𝙨𝙝]
+   Developed By <a href="https://bit.ly/akashblsbrmnm">[𝘼𝙠𝙖𝙨𝙝]</a>
   </div>
 
 </div>
