--- a/index.html
+++ b/index.html
@@ -45,9 +45,6 @@
         <li class="nav-item">
           <a class="nav-link" href="https://www.sist.in/b-tech-admission/">Admission</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="where.html">Contact Us</a>
-        </li>
         <!-- Dropdown -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
@@ -56,7 +53,7 @@
           <!-- Dropdown menu -->
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li>
-              <a class="dropdown-item" href="#alumni"><i class="fas fa-user-graduate"></i>  Alumni</a>
+              <a class="dropdown-item" href="index.html#alumni"><i class="fas fa-user-graduate"></i>  Alumni</a>
             </li>
             <li>
               <a class="dropdown-item" href="instr.html"><i class="fas fa-book"></i>  Study Materials</a>
@@ -81,11 +78,16 @@
 <!-- Navbar -->
 <div id="abt" class="header">
         <div class="dacs">
-          <h2>Portal for
+          <h2>PORTAL FOR
           </h2>
           <h1>Department of<br>Computer Science</h1>
           </div>
-          <button class="button button4"><a href="https://www.sist.in/apply-online/" target="_blank" rel="noopener noreferrer">Enroll Now</a></button>
+          <button class="learn-more">
+            <span aria-hidden="true" class="circle">
+            <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Enroll Now</span>
+          </button>
       </div>
       <div class="certifications">
           <img src="assets/dashlogos.png">
@@ -186,7 +188,7 @@ The college is strict in discipline - anti ragging..</p>
 </footer>
 <div class="bottom-footer">
   <div class = "inner-wrap clearfix">
-   Developed By <a href="https://bit.ly/akashblsbrmnm">[𝘼𝙠𝙖𝙨𝙝]</a>
+   <p>Developed By <a href="https://bit.ly/akashblsbrmnm">[𝘼𝙠𝙖𝙨𝙝]</a></p>
   </div>
 
 </div>
