--- a/instr.html
+++ b/instr.html
@@ -45,9 +45,6 @@
         <li class="nav-item">
           <a class="nav-link" href="https://www.sist.in/b-tech-admission/">Admission</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="where.html">Contact Us</a>
-        </li>
         <!-- Dropdown -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
@@ -56,7 +53,7 @@
           <!-- Dropdown menu -->
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li>
-              <a class="dropdown-item" href="#alumni"><i class="fas fa-user-graduate"></i>  Alumni</a>
+              <a class="dropdown-item" href="index.html#alumni"><i class="fas fa-user-graduate"></i>  Alumni</a>
             </li>
             <li>
               <a class="dropdown-item" href="#"><i class="fas fa-book"></i>  Study Materials</a>
