--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ The college is strict in discipline - anti ragging..</p>
 </footer>
 <div class="bottom-footer">
   <div class = "inner-wrap clearfix">
-   <p>Developed By <a href="https://bit.ly/akashblsbrmnm">[𝘼𝙠𝙖𝙨𝙝]</a></p>
+   <p>Developed By <a href="">[𝘼𝙠𝙖𝙨𝙝]</a></p>
   </div>
 
 </div>
