--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
         <li class="nav-item">
           <a class="nav-link" href="https://www.sist.in/b-tech-admission/">Admission</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="syllabus.html">Syllabus</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="resume.html" target="blank">Generate Resume</a>
+        </li> 
         <!-- Dropdown -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-mdb-toggle="dropdown" aria-expanded="false">
@@ -53,12 +59,6 @@
           </a>
           <!-- Dropdown menu -->
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li>
-              <a class="dropdown-item" href="index.html#alumni"><i class="fas fa-user-graduate"></i>  Alumni</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="instr.html"><i class="fas fa-book"></i>  Study Materials</a>
-            </li>
             <li>
               <a class="dropdown-item" href="https://www.onlinegdb.com/"><i class="fas fa-code"></i>  Online IDE</a>
             </li>
